# torch-test-xpu

./: README.md  main.py  pyproject.toml  requirements.txt
