[project]
name = "torch-test-xpu"
version = "0.1.0"
description = "Testing PyTorch functionality with Intel GPUs (XPU)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pip>=24.3.1",
    "torch>=2.5.1",
    "pytorch-triton-xpu>=3.0.0; platform_system == 'Linux'",
]

[tool.uv]
environments = ["platform_system == 'Linux' or platform_system == 'Windows'"]

[tool.uv.sources]
torch = [
    { index = "pytorch-test-xpu", marker = "platform_system == 'Linux' or platform_system == 'Windows'" },
]
pytorch-triton-xpu = [
    { index = "pytorch-test-xpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-test-xpu"
url = "https://download.pytorch.org/whl/test/xpu"
explicit = true
